--- a/style.css
+++ b/style.css
@@ -2,36 +2,12 @@
     border: 1px solid #000 !important;
   }
   
-  #green {
-      color: #B7EDAA;
-  }
-  
-  #orange {
-      color: #EBD2AD;
-  }
-  
-  #red {
-      color: #E9BBCA;
-  }
-  
   .grid-container {
     display: grid; /* This is a (hacky) way to make the .grid element size to fit its content */
     overflow: auto;
     width: 100%;
+    height:100%;
   
-  }
-  
-  .grid-container2 {
-      display: grid; /* This is a (hacky) way to make the .grid element size to fit its content */
-      overflow: auto;
-      width: 100%;
-      height: 350px;
-  }
-  
-  .grid-container3 {
-      display: grid; /* This is a (hacky) way to make the .grid element size to fit its content */
-      overflow: auto;
-      width: 100%;
   }
   
   .grid {
@@ -40,32 +16,7 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 11px;
     background-color: white;
-    overflow: auto;
-  
-  }
-  
-  .grid2 {
-      display: flex;
-      flex-wrap: nowrap;
-      font-family: 'Montserrat', sans-serif;
-      font-size: 11px;
-      background-color: white;
-  }
-  
-  .grid3 {
-      display: flex;
-      flex-wrap: nowrap;
-      font-family: 'Montserrat', sans-serif;
-      font-size: 11px;
-      background-color: white;
-  }
-  
-  .info {
-      background-color: white;
-      padding: 40px;
-      text-align: left;
-      white-space: pre-wrap;
-      border-top: 1px solid #E7E8E8;
+    overflow:auto;
   }
   
   .grid-col, .grid-col2, .grid-col3 {
@@ -75,11 +26,14 @@
   .grid-item--header {
     position: sticky;
     position: -webkit-sticky;
-    background: #457B9D;
+    background: #494949;
     color: #FFF;
-    padding: 18px;
-    
+    padding-left: 20px;
+    padding-right: 20px;
     top: 0;
+    overflow:hidden;
+    white-space:nowrap;
+    
   }
   
   .grid-footer {
@@ -126,7 +80,8 @@
   }
   
   #rating {
-      
+      width: 80px;
+      min-width: 80px;
   }
   
   #innerName {
@@ -153,10 +108,19 @@
       color: #ED6A5A;
   }
   
-  #headerName, #headerPrice, #headerRating, #headerReq, #headerSupply, #headerNumber, #headerCountDown {
-      border-right: 1px solid #9BC1BC;
+  #headerName, #headerPrice, #headerReq, #headerSupply, #headerNumber, #headerCountDown {
+      border-right: 1px solid #7C7A7A;
       height: 50px;
+      line-height: 50px;
       min-height: 50px;
+  }
+
+  #headerRating {
+    border-right: 1px solid #7C7A7A;
+    height: 50px;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    min-height: 50px;
   }
   
   #numbers, #rating, #countDowns {
@@ -168,8 +132,7 @@
   }
   
   #tsupply {
-      width: 150px;
-      min-width: 150px;
+
   }
 
   #reqs {
@@ -186,6 +149,7 @@
   .grid-col--fixed-left {
     position: sticky;
     left: 0;
+    bottom: 0;
     z-index: 9998;
     background: white;
   }
@@ -193,37 +157,35 @@
   .grid-col--fixed-left2 {
     position: sticky;
     left: 60px;
+    bottom: 0;
     z-index: 9998;
     background: white;
   }
   
-  .grid-col--fixed-left3 {
-      position: sticky;
-      left: 0;
-      z-index: 9998;
-      background: white;
-  }
-  
   .grid-item {
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     border-bottom: 1px solid #E7E8E8;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow:hidden;
     height: 50px;
+    line-height: 50px;
     min-height: 50px;
   
   }
   
-  .grid-item2 {
-      padding-left: 20px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      text-align: left;
-  }
-  
-  .grid-item3 {
-  padding: 20px;
+  .grid-item1 {
+    padding-left: 20px;
+    padding-right: 20px;
+    border-bottom: 1px solid #E7E8E8;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow:hidden;
+    padding-top:19px;
+    padding-bottom:19px;
+    height: 50px;
+    min-height: 50px;
   }
   
   .grid-item:last-child, .grid-item1:last-child {
@@ -247,7 +209,7 @@
   }
   
   .rating {
-      font-size:10px;
+      font-size:11px;
   }
   
   .rating .fas {
@@ -534,7 +496,7 @@
       -webkit-justify-content: center;
       -ms-justify-content: center;
       justify-content: center;
-      background-color: #457B9D;
+      background-color: #494949;
   }
   
   #container01 > .inner > * {
@@ -629,7 +591,7 @@
       -webkit-justify-content: center;
       -ms-justify-content: center;
       justify-content: center;
-      background-color: #457B9D;
+      background-color: #494949;
   }
   
   #container02 > .inner > * {
